--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JS 2D Game</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <div id="game">
+    <div class="container">
+        <div class="game-container">
+            <div id="game"></div>
+            <p class="manual">Press arrow keys to control character. Press space to jump</p>
+        </div>
+
+
 
     </div>
+
 
     <script src="js/phaser.min.js"></script>
     <script src="js/play.js"></script>
