--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
     <div class="container">
         <div class="game-container">
             <div id="game"></div>
-            <p class="manual">Press arrow keys to control character. Press space to jump</p>
+            <p class="manual">Press arrow keys to control character. Press space to jump. Remember: lava kills :)</p>
         </div>
-
-
-
     </div>
-
 
     <script src="js/phaser.min.js"></script>
     <script src="js/play.js"></script>
