--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JS 2D Game</title>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Creepster" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <div class="game-container">
             <div id="game"></div>
-            <p class="manual">Press arrow keys to control character. Press space to jump. Remember: lava kills :)</p>
+            <p class="manual">Press arrow keys to control character. Press space to jump. Avoid knights. Remember: lava kills!</p>
         </div>
     </div>
 
