--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="game-container">
             <div id="game"></div>
-            <p class="manual">Press arrow keys to control character. Press space to jump. Avoid knights. Remember: lava kills!</p>
+            <p class="manual">Press arrow keys to control character. Press space to jump. Avoid knights. Remember: lava kills! <br>Click on screen to go FullScreen</p>
         </div>
     </div>
 
